# Whisk
# Copyright © 2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "whisk"
version = "0.1.0"
license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "A simple and fast two-way async channel"
repository = "https://github.com/AldaronLau/whisk"
documentation = "https://docs.rs/whisk"
homepage = "https://github.com/AldaronLau/whisk/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*", "benches/addition.rs"]
categories = [
    "asynchronous",
    "concurrency",
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = ["channel", "message", "spsc", "thread", "send"]
readme = "README.md"
edition = "2021"

[dev-dependencies]
pasts = "0.8"
dl_api = "0.4"
criterion = { version = "0.3", features = ["async_futures"] }
futures = "0.3"
flume = "0.10"
ntest = "0.7"

[features]
default = ["std"]
std = []

[[bench]]
name = "addition"
harness = false
