# Whisk
# Copyright © 2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "whisk"
version = "0.4.1"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Simple and fast async channels"
repository = "https://github.com/ardaku/whisk"
documentation = "https://docs.rs/whisk"
homepage = "https://github.com/ardaku/whisk/blob/stable/CHANGELOG.md"
include = ["README.md", "src/*"]
categories = [
    "asynchronous",
    "concurrency",
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = ["channel", "actor", "mpmc", "notifier", "pasts"]
readme = "README.md"
edition = "2021"
rust-version = "1.59"

[dependencies.futures-core]
version = "0.3"
optional = true

[dependencies.pasts]
version = "0.12"
optional = true

[dev-dependencies]
pasts = "0.12"
dl_api = "0.4"
futures = "0.3"
flume = "0.10"
ntest = "0.8"
libm = "0.2"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.docs.rs]
all-features = true
