# Whisk
# Copyright © 2022-2023 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "whisk"
version = "0.12.1"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Simple and fast lockless async channels"
repository = "https://github.com/ardaku/whisk"
documentation = "https://docs.rs/whisk"
homepage = "https://github.com/ardaku/whisk/blob/stable/CHANGELOG.md"
include = ["README.md", "src/*", "examples/tokio.rs"]
categories = [
    "asynchronous",
    "concurrency",
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = ["channel", "actor", "mpmc", "notifier", "pasts"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[[example]]
name = "tokio"
required-features = ["futures-core"]

[dependencies.futures-core]
version = "0.3"
optional = true
default-features = false

[dependencies.pasts]
version = "0.14"
optional = true
default-features = false

[dev-dependencies]
async_main = { version = "0.4", features = ["pasts"] }
dl_api = "0.4"
flume = "0.11"
futures = "0.3"
libm = "0.2"
ntest = "0.9"
tokio-stream = "0.1"

[dev-dependencies.pasts]
version = "0.14"
default-features = false

[dev-dependencies.tokio]
version = "1.28"
default-features = false
features = ["rt-multi-thread", "macros"]

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.docs.rs]
all-features = true
